--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/got": "^9.6.12",
     "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.191",
     "@types/pg": "^8.6.6",
