--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "date-fns": "^2.29.3",
     "discord.js": "^14.8.0",
-    "got": "^12.6.0",
+    "got": "11.8.6",
     "lodash": "^4.17.21",
     "mixpanel": "^0.17.0",
     "pg": "^8.10.0",
