--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "djs-typescript-template",
-  "version": "0.1.3",
-  "description": "Opinionated Typescript template for building Discord.js applications",
+  "name": "nino",
+  "version": "0.0.0",
+  "description": "Random waifu image discord bot",
   "license": "MIT",
   "scripts": {
     "start": "yarn build && yarn build:watch",
@@ -18,6 +18,7 @@
   "dependencies": {
     "date-fns": "^2.29.3",
     "discord.js": "^14.8.0",
+    "got": "11.8.6",
     "lodash": "^4.17.21",
     "mixpanel": "^0.17.0",
     "pg": "^8.10.0",
@@ -25,6 +26,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/got": "^9.6.12",
     "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.191",
     "@types/pg": "^8.6.6",
