--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,8 +1,11 @@
 name: deploy/prod
 
 on:
-  release:
-    types: [published]
+  pull_request:
+    branches:
+      - develop
+  # release:
+  #   types: [published]
 
 jobs:
   deploy:
@@ -13,6 +16,32 @@ jobs:
         uses: actions/checkout@v3
 
       # Add your deployment process here; personally I deploy it to a DigitalOcean droplet
+      - name: Logs in to DigitalOcean droplet and deploy changes
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.DO_HOST }}
+          username: ${{ secrets.DO_USERNAME }}
+          password: ${{ secrets.DO_PASSWORD }}
+          script: |
+            export NVM_DIR=~/.nvm
+            source ~/.nvm/nvm.sh
+            nvm install 16.13.0
+            pm2 stop nino
+            pm2 delete nino
+            cd nino
+            git restore .
+            git clean -f
+            git checkout develop
+            git pull
+            git fetch --tags
+            git branch | grep -v "develop" | xargs git branch -D            
+            git checkout tags/${{ github.ref_name }} -b prod/${{ github.ref_name }}
+            echo "${{ secrets.ENVIRONMENT_PROD }}" > src/config/environment.ts
+            echo "${{ secrets.DATABASE_PROD }}" > src/config/database.ts
+            yarn update:version
+            yarn install
+            yarn build
+            pm2 start deploy.config.js --env prod
 
       - name: Send notification to Discord
         env:
