--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -36,7 +36,7 @@ jobs:
             git pull
             git fetch --tags
             git branch | grep -v "develop" | xargs git branch -D            
-            git checkout -b test/deploy
+            git switch release/add-deploy-prod-workflow
             echo "${{ secrets.ENVIRONMENT_PROD }}" > src/config/environment.ts
             echo "${{ secrets.DATABASE_PROD }}" > src/config/database.ts
             yarn update:version
