--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "date-fns": "^2.29.3",
     "discord.js": "^14.8.0",
+    "flagsmith-nodejs": "^2.5.2",
     "got": "11.8.6",
     "lodash": "^4.17.21",
     "mixpanel": "^0.17.0",
