--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.191",
     "@types/pg": "^8.6.6",
+    "@types/qs": "^6.9.7",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
