--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "build:watch": "yarn tsc-watch --onSuccess 'node dist/App.js'",
     "update:version": "node -p \"'export const BOT_VERSION = ' + JSON.stringify(require('./package.json').version) + ';' + 'export const BOT_UPDATED_AT = ' + JSON.stringify('$(date +'%d-%b-%Y')')\" > src/version.ts",
-    "test": "jest",
+    "test": "jest --watch",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "auto:changelog": "yarn auto changelog",
     "auto:version": "yarn version --`auto version`",
