--- a/.github/workflows/daily-schedule.yml
+++ b/.github/workflows/daily-schedule.yml
@@ -3,11 +3,33 @@ name: daily/schedule
 on:
   schedule:
     - cron: '0 13 * * *' # 9pm in Singapore time (minus 8)
+  push:
+    branches:
+      - schedule/*
 
 jobs:
-  daily-schedule:
+  logs-in-discord:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Set up Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Initialise discord bot
+        run: yarn start
+
+  trigger-schedule:
+    needs: logs-in-discord
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 'Trigger schedule'
+        run: 'yarn trigger:schedule'
