--- a/.github/workflows/daily-schedule.yml
+++ b/.github/workflows/daily-schedule.yml
@@ -2,7 +2,7 @@ name: daily/schedule
 
 on:
   schedule:
-    - cron: '15 13 * * *' # 9pm in Singapore time (minus 8)
+    - cron: '20 13 * * *' # 9pm in Singapore time (minus 8)
   push:
     branches:
       - schedule/*
@@ -22,6 +22,11 @@ jobs:
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+
+      - name: Create config files
+        run: |
+          echo "${{ secrets.ENVIRONMENT_DEV }}" > src/config/environment.ts
+          echo "${{ secrets.DATABASE_DEV }}" > src/config/database.ts
 
       - name: Initialise discord bot
         run: yarn start
