--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "auto:version": "yarn version --`auto version`",
     "auto:release": "yarn auto:changelog && yarn auto:version",
     "release": "git fetch --tags --force && git checkout -b release/$(date +'%Y-%m-%d') && yarn auto:release && yarn update:version && git add . && git commit -m 'Update version' && git push -u origin head",
-    "trigger:schedule": "yarn dist/utils/scheduler.js"
+    "trigger:schedule": "yarn build && TRIGGER_SCHEDULE=true node dist/App.js"
   },
   "dependencies": {
     "date-fns": "^2.29.3",
